feat(java): expande Dicionário de Java com verbetes do galho 3 (JVM)